# spark-connect-rust

./: .docker_compose_env  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  Makefile.toml  README.md  buf.gen.yaml  build.rs
.github/workflows/: push.yml  release.yml
examples/: dataframe.rs  sql.rs
src/: arrow.rs  dataframe.rs  error.rs  lib.rs  plan.rs  session.rs
tests/: common.rs  test_dataframe.rs  test_load.rs  test_named_tables.rs  test_sql.rs  test_util.rs
