[package]
name = "spark-connect-rust"
version = "0.0.1-alpha.1"
edition = "2021"
license-file = "LICENSE"
description = "Implementation of Spark Connect in Rust"
repository = "https://github.com/edmondop/spark-connect-rust"
include = [
    ".docker_compose_env",
    "build.rs",
    "docker-compose.yml",
    "examples/**/*",
    "Makefile.toml",
    "spark/connector/connect/common/src/main/protobuf/**/*",
    "src/**/*",
    "tests/**/*"
]

[dependencies]
tonic = "0.9.2"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
prost = "0.11.9"
prost-types = "0.11.9"
uuid = { version = "1.4.1", features = ["v4"] }
arrow-ipc = "44.0.0"
arrow = { version = "44.0.0", features = ["prettyprint"] }


[build-dependencies]
tonic-build = "0.9.2"

[dev-dependencies]
rand = "0.8.5"

[package.metadata.release]
push = true
publish = false # handled by GitHub Actions

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "Unreleased"
replace = "{{version}}"
exactly = 2

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "ReleaseDate"
replace = "{{date}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace = "...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- @next-header@ -->"
replace = "<!-- @next-header@ -->\n\n## [Unreleased] - ReleaseDate"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- @next-url@ -->"
replace = "<!-- @next-url@ -->\n[Unreleased]: https://github.com/edmondop/spark-connect-rust/compare/{{tag_name}}...HEAD"
exactly = 1
